plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'com.diffplug.spotless' version '6.22.0'
}

group = 'com.kbtg.bootcamp'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

tasks.register('controllerTest', Test) {
	// to prevent Mockito's inline mock maker fail on container
	jvmArgs('-Djdk.attach.allowAttachSelf=true', '-XX:+StartAttachListener')

	description = 'Runs integration tests.'
	group = 'verification'
	useJUnitPlatform()
	filter {
		include '**/*ControllerTest.*'
	}
}


repositories {
	mavenCentral()
}

spotless{
	java{
		removeUnusedImports()
		indentWithTabs()
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers:1.24.0'
}

sourceSets {
	integrationTest {
		java {
			compileClasspath += main.output + test.output
			runtimeClasspath += main.output + test.output
			srcDir file('src/test/java')
		}
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
